Et voila, alles fertig.

--- a/styles.css
+++ b/styles.css
@@ -3,27 +3,192 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 100vh;
-    overflow: none;
+    height: 200vh;
+    margin: 0px;
+    font-family:'Courier New', Courier, monospace
 }
 
 .header, .footer {
     background-color: #1F2937;
+    padding: 15px;
 }
 
 .quote {
-    background-color: #EFE7EB;
+    background-color: #E5E7EB;
     font-size: 36px;
     color: #1f2937;
     display: flex;
     justify-content: center;
-    
+    align-content: center;
+    padding: 150px;
+   
+}
+.quote2 {
+    background-color: #E5E7EB;
+    font-size: 24px;
+    font-weight: 900;
+    color: #1f2937;
+    display: flex;
+    justify-content: flex-end;
+    align-content: center;
+    padding-right: 150px;
+    padding-bottom: 150px;
+    margin-top: -140px;
 }
 
 .header {
-    
+    display: flex;
+    flex-direction: column;
+}
+
+.headerlogo {
+    color: #F9FAF8;
+    font-size: 24px;
+    display: flex;
+    align-content: center;
+    flex-wrap: wrap;
+}
+
+.headerlink {
+    display: flex;
+}
+
+.headerhero {
+    font-size: 48px;
+    font-weight: 900;
+    color: #f9f9f9;
+}
+.headertop {
+    display: flex;
+    flex: 1;
+    align-content: center;
+    justify-content: space-between;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 75px;
+}
+
+.headerbottom {
+    display: flex;
+    flex: 1;
+    justify-content: space-between;
+    padding-left: 200px;
+    padding-right: 200px;
+    padding-bottom: 75px;
 }
 
 .footer {
-    flex:0
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    color: #E5E7EB;
+    align-content: center;
+}
+
+ul {
+    display: flex;
+    list-style: none;
+    gap: 30px;
+}
+
+a, span {
+    text-decoration: none;
+    color: #E5E7EB;
+    font-size: 18px;
+}
+
+.item {
+    border: solid #3882F6 5px;
+    border-radius: 25px;
+    height: 150px;
+    flex: 0 1 150px;   
+    margin-bottom: 15px;
+}
+
+.box {
+    display: flex;
+    flex: 0 1 150px;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-content: center;
+}
+
+
+.content {
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 50px;
+}
+
+.contenttop {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    text-align: center;
+    padding: 40px;
+}
+
+.contentbottom {
+    display: flex;
+    justify-content: center;
+    align-content:space-between;
+    padding: 50px;
+    gap: 50px;
+}
+
+.headerhero {
+    width: 50%;
+    flex-wrap: wrap;
+}
+
+.headerimg {
+    background-color: darkgray;
+    width: 50%;
+    height: 200px;
+    margin-left: 50px;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+button {
+    background-color: #3882F6;
+    width: 120px;
+    height: 40px;
+    border:none;
+    border-radius: 5px;
+    color: white;
+    font-size: 20px;
+    font-weight: 800;
+}
+
+.calltoaction {
+    margin: 100px;
+    background-color: #3882F6;
+    display: flex;
+    justify-content: space-around;
+    border-radius: 10px;
+    padding: 25px;
+    align-content: center;
+    flex-wrap: wrap;
+    gap: 50px;
+    color: #F9FAF8;
+    font-size: 24px;
+    font-weight: 800;
+}
+
+.button2 {
+    background-color: #3882F6;
+    width: 120px;
+    height: 40px;
+    border-radius: 5px;
+    color: white;
+    font-size: 20px;
+    font-weight: 900;
+    display: flex;
+    justify-content: center;
+    align-self: center;
+    flex-wrap: wrap;
+    border: 2px solid;
 }
